# fujifilms-task

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: global_supplier.hpp  local_supplier.hpp  organization.h  organization.hpp  product.h  product.hpp  supplier.hpp
src/: global_supplier.cpp  local_supplier.cpp  main.cpp  organization.cpp  product.cpp  supplier.cpp
